fixes for removing individual overlapping textanchors in a textBox. Hopefully near final cleanup of linkDocPreview and FormattedTextComment

--- a/src/client/views/nodes/LinkDocPreview.scss
+++ b/src/client/views/nodes/LinkDocPreview.scss
@@ -19,6 +19,9 @@
             height: 37px;
             white-space: pre;
 
+            .linkDocPreview-buttonBar {
+                float: right;
+            }
             .linkDocPreview-title {
                 padding-right: 4px;
                 float: left;
